--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,17 @@ after_success:
     - docker push akshazsingh/multi-server
     - docker push akshazsingh/multi-worker
     - docker push akshazsingh/multi-nginx
+
+deploy:
+    edge: true
+    provider: elasticbeanstalk
+    region: us-east-2
+    app: multi-docker
+    env: MultiDocker-env
+    bucket: elasticbeanstalk-us-east-2-149958623134
+    bucket_path: multi-docker
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY_ID
+    secret_access_key: 
+        secure: $AWS_SECRET_ACCESS_KEY
